--- a/Labo1Spinners/app/build.gradle
+++ b/Labo1Spinners/app/build.gradle
@@ -28,12 +28,18 @@ android {
     }
 }
 
-dependencies {
+repositories {
+    google()
+    mavenCentral()
+}
 
+dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 }
